<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestSurprise</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="REGISTER">LOGIN</string>
    <string name="FullName">Full Name</string>
    <string name="Email">Registration ID</string>
    <string name="Password">Password</string>
    <string name="Register">Login</string>
    <string name="registered">Already registred. Login Me!</string>
    <string name="lolo">CLICK HERE!</string>
    <string name="hello_world1">1.Only Scientific Calculator is allowed.</string>
    <string name="hello_world2">2. Borrowing thing not allowed.</string>
    <string name="hello_world3">3.No extra time will be given.</string>
    <string name="hello_world4">4.No rule of retest.</string>
    <string name="hello_world5">INSTRUCTIONS</string>
    <string name="title_activity_test_code">TestCode</string>
    <string name="code">Enter Test Code </string>
    <string name="proceed">Proceed</string>
    <string name="regno">Enter Registration no.</string>
    <string name="title_activity_result">Result</string>
    <string name="hello_world">Hello world!</string>
    <string name="r1">RESULT</string>
    <string name="r2">-To see result u need two things-</string>
    <string name="r3">-1.Test code 2.Registration ID</string>
    <string name="r4">-to see result click the button below.</string>
    <string name="r5">NOTE- u can only see ur result if u have submitted test</string>
    <string name="Result">RESULT</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_result_final">ResultFinal</string>
    <string name="title_activity_evarsity_final">EvarsityFinal</string>

</resources>
