<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
     >
<LinearLayout 
    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TestCode"
    android:orientation="vertical"
    
     >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world5"
        android:textSize="22sp"
        android:layout_marginTop="8dp" />
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world1"
        android:textSize="18sp"
        android:layout_marginTop="30dp" />
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world2"
        android:textSize="18sp"
        android:layout_marginTop="10dp" />
       <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world3"
        android:textSize="18sp" 
         android:layout_marginTop="10dp"/>
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world4"
        android:textSize="18sp"
         android:layout_marginTop="10dp" />
        </LinearLayout>
        
    <SlidingDrawer 
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:handle="@+id/handle"
        android:content="@+id/content"
        android:id="@+id/slidingd"
         >
        <Button 
            android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:id="@+id/handle"
        android:text="@string/lolo"
        android:background="@drawable/yo"/>
     
        <ScrollView
  android:id="@id/content"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent">
        <LinearLayout android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/content"
          android:orientation="vertical"
          android:background="#E5E4E2"
         >
          <TextView
            android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/view"
        android:text="@string/code"
        android:layout_marginTop="10dp"
         /> 
         <EditText
             android:layout_width="fill_parent"
             android:inputType="number"
             android:layout_height="40dp"
             android:id="@+id/Code"
             />
         <TextView
            android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/view1"
        android:text="@string/regno"
        android:layout_marginTop="10dp"
         /> 
         <EditText
             android:layout_width="fill_parent"
             android:inputType="number"
             android:layout_height="40dp"
             android:id="@+id/Registration"
             
             />
         <Button 
            android:layout_width="170dp"
        android:layout_height="50dp"
        android:id="@+id/Proceed"
        android:text="@string/proceed"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:background="@drawable/anim3"/>
               
         </LinearLayout>
         </ScrollView>
    </SlidingDrawer>
        


</FrameLayout>